# real-estate-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.sql.json  .prettierrc.xml.json  .prettierrc.yaml.json  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md  migrations.json  nx-python.json  nx.bat  nx.json  package-lock.json  package.json  real-estate-platform.sln  requirements.txt
.github/: copilot-instructions.md
.husky/: post-merge  pre-commit  pre-push
.nx/: nx-cloud.env  project-graph.json
docs/: ci-cd.md  dotnet-development.md  jaeger-deployment-diagnostics.md  local-podman-troubleshooting.md  node-development.md  nx-usage.md  project-templates.md  python-development.md
infra/: deploy-control.yaml
tools/python/: .flake8  .sqlfluff  .yamllint  README.md  format-requirements.txt  mypy.ini  pyproject.toml  python-dev-requirements.txt  python-dev-setup.js  python-setup.md  requirements.txt
tools/python/docs/: PYTHON-CROSS-PLATFORM.md  README-PYTHON.md  nx-python-guide.md  python-project-structure.md  python-setup-guide.md
tools/python/scripts/: check-nx-python.js  check-py-staged.bat  check-py-staged.sh  check-python-ondemand.bat  check-python-ondemand.sh  create-venv.bat  create-venv.sh  format-python.sh  install-python-direct.bat  install-python-direct.sh  install-python.bat  install-python.sh  lint-python.sh  py-help.js  setup-hooks.js  setup-nx-python.bat  setup-nx-python.js  setup-nx-python.sh  setup-python-all.sh  setup-python-dev.bat  setup-python-dev.sh  type-check-python.sh
(+99 files in other folders)
